@@ -4,6 +4,7 @@ Revision history for Acme-Pi
           - added new export, a constant sub named π
           - re-introduce all uses of PPI, now that encoding issues are fixed
             (done at the 2016 QA Hackathon in Rugby, UK)
+          - added $𝝿 variable and 𝝿 constant
 
 3.141592  2016-03-14 18:04:51Z
           - truncate $VERSION to 16 chars, to work with PAUSE's new sanity
